--- a/html/src/html/templates/kako-da-nas-podrzis/template.hbs
+++ b/html/src/html/templates/kako-da-nas-podrzis/template.hbs
@@ -8,7 +8,11 @@
 
 			{{> simple-form simpleForm}}
 
+			{{> testimonials testimonials}}
+
 			{{> donations donations}}
+
+			{{> faq faq}}
 
 			{{> join-module joinUs}}
 		</main>
