kontakt page map, faq shape

--- a/html/src/html/modules/faq/faq.hbs
+++ b/html/src/html/modules/faq/faq.hbs
@@ -15,4 +15,7 @@
 			{{/each}}
 		</div>
 	</div>
+	<div class="faq__shape">
+		<img src="assets/images/shapes/faq-shape.svg" alt="">
+	</div>
 </div>
