--- a/html/src/html/templates/kontakt/template.hbs
+++ b/html/src/html/templates/kontakt/template.hbs
@@ -4,7 +4,7 @@
 		{{> header header}}
 
 		<main class="main">
-			{{> page-intro pageIntro}}
+			{{> contact-map contactMap}}
 
 			{{> contact-form contactForm}}
 
