added secondary mask, replaced on some pages

--- a/html/src/html/templates/index/template.hbs
+++ b/html/src/html/templates/index/template.hbs
@@ -24,6 +24,9 @@
 							<a style="color: #151515;" href="kako-da-nas-podrzis.html">Kako da nas podržiš?</a>
 						</li>
 						<li style="margin-bottom: 5px;">
+							<a style="color: #151515;" href="novosti.html">Novosti</a>
+						</li>
+						<li style="margin-bottom: 5px;">
 							<a style="color: #151515;" href="single-blog.html">Single blog</a>
 						</li>
 						<li style="margin-bottom: 5px;">
