--- a/html/src/html/templates/novosti/template.hbs
+++ b/html/src/html/templates/novosti/template.hbs
@@ -4,9 +4,9 @@
 		{{> header header}}
 
 		<main class="main">
-			{{> contact-map contactMap}}
+			{{> page-intro pageIntro}}
 
-			{{> contact-form contactForm}}
+			{{> join-module joinUs}}
 		</main>
 
 		{{> footer footer}}
