reworking image shapes and mask

--- a/html/src/html/modules/featured-project/featured-project.hbs
+++ b/html/src/html/modules/featured-project/featured-project.hbs
@@ -7,11 +7,13 @@
 				<p class="featured-project__text">{{text}}</p>
 				<a class="btn" href="javascript:;">{{link}}</a>
 			</div>
-			<div class="featured-project__mask featured-project__mask--normal">
-				{{#if additionalImage}}
-				<img class="featured-project__additional-image" src="{{additionalImage}}" alt="">
-				{{/if}}
-				<div class="featured-project__image has-cover" style="background-image: url('{{image}}');"></div>
+			<div class="featured-project__image-outer">
+				<div class="featured-project__mask featured-project__mask--normal">
+					{{#if additionalImage}}
+					<img class="featured-project__additional-image" src="{{additionalImage}}" alt="">
+					{{/if}}
+					<div class="featured-project__image has-cover" style="background-image: url('{{image}}');"></div>
+				</div>
 			</div>
 		</div>
 		<div class="featured-project__item featured-project__item--reverse">
@@ -21,11 +23,13 @@
 				<p class="featured-project__text">{{textReverse}}</p>
 				<a class="btn" href="javascript:;">{{linkReverse}}</a>
 			</div>
-			<div class="featured-project__mask featured-project__mask--reverse">
-				{{#if additionalImageReverse}}
-				<img class="featured-project__additional-image" src="{{additionalImageReverse}}" alt="">
-				{{/if}}
-				<div class="featured-project__image has-cover" style="background-image: url('{{imageReverse}}');"></div>
+			<div class="featured-project__image-outer featured-project__image-outer--reverse">
+				<div class="featured-project__mask featured-project__mask--reverse">
+					{{#if additionalImageReverse}}
+					<img class="featured-project__additional-image" src="{{additionalImageReverse}}" alt="">
+					{{/if}}
+					<div class="featured-project__image has-cover" style="background-image: url('{{imageReverse}}');"></div>
+				</div>
 			</div>
 		</div>
 		<span class="circle circle--mint circle--big featured-project__circle"></span>
