--- a/html/src/html/modules/support/support.hbs
+++ b/html/src/html/modules/support/support.hbs
@@ -14,8 +14,10 @@
 				<div class="circle circle--grey circle--small support__circle"></div>
 			</div>
 		{{/if}}
-		<div class="support__image-mask">
-			<div class="support__image has-cover" style="background-image: url('{{image}}');"></div>
+		<div class="support__image-outer">
+			<div class="support__image-mask">
+				<div class="support__image has-cover" style="background-image: url('{{image}}');"></div>
+			</div>
 		</div>
 	</div>
 </div>
