--- a/html/src/scss/base/_layout.scss
+++ b/html/src/scss/base/_layout.scss
@@ -26,6 +26,9 @@ body {
 	max-width: 1768px;
 	padding: 0 20px;
 	width: 100%;
+	@include breakpoint(laptop) {
+		padding: 0 40px;
+	}
 }
 
 .wrap--medium {
@@ -64,16 +67,32 @@ body {
 .circle--tiny {
 	width: 36px;
 	height: 36px;
+	@include breakpoint(laptop) {
+		width: 26px;
+		height: 26px;
+	}
 }
 .circle--small {
 	width: 42px;
 	height: 42px;
+	@include breakpoint(laptop) {
+		width: 22px;
+		height: 22px;
+	}
 }
 .circle--big {
 	width: 58px;
 	height: 58px;
+	@include breakpoint(laptop) {
+		width: 38px;
+		height: 38px;
+	}
 }
 .circle--large {
 	width: 61px;
 	height: 61px;
+	@include breakpoint(laptop) {
+		width: 40px;
+		height: 40px;
+	}
 }
