--- a/html/src/scss/layout/_buttons.scss
+++ b/html/src/scss/layout/_buttons.scss
@@ -34,6 +34,10 @@ input[type='submit'] {
 	@include hover {
 		box-shadow: 0 10px 16px rgba(39, 142, 208, 0.16);
 	}
+	@include breakpoint(laptop) {
+		padding: 12px 20px;
+		min-width: 180px;
+	}
 }
 
 .btn--small {
