--- a/html/src/scss/plugins/_slick.scss
+++ b/html/src/scss/plugins/_slick.scss
@@ -95,13 +95,26 @@
 		background-color: $blue;
 		box-shadow: 0 10px 16px rgba(39, 142, 208, 0.16);
 	}
+	@include breakpoint(laptop) {
+		width: 56px;
+		height: 56px;
+		&::before {
+			font-size: 18px;
+		}
+	}
 }
 .slick-prev {
 	left: -84px;
 	&::before {
 		transform: rotate(180deg);
 	}
+	@include breakpoint(laptop) {
+		left: -74px;
+	}
 }
 .slick-next {
 	right: -84px;
+	@include breakpoint(laptop) {
+		right: -74px;
+	}
 }
