--- a/html/src/html/modules/text-image/text-image.hbs
+++ b/html/src/html/modules/text-image/text-image.hbs
@@ -7,8 +7,10 @@
 					<p class="text-image__text">{{this}}</p>
 				{{/each}}
 			</div>
-			<div class="text-image__image">
-				<div class="text-image__img has-cover" style="background-image: url('{{image}}')"></div>
+			<div class="text-image__image-outer">
+				<div class="text-image__image">
+					<div class="text-image__img has-cover" style="background-image: url('{{image}}')"></div>
+				</div>
 			</div>
 			<div class="circle circle--mint text-image__circle"></div>
 		</div>
