--- a/html/src/html/modules/page-intro/page-intro.hbs
+++ b/html/src/html/modules/page-intro/page-intro.hbs
@@ -8,10 +8,12 @@
 				</div>
 			</div>
 			{{!-- additionalImgClass can be: page-intro__image--secondary, page-intro__image--tertiary, page-intro__image--quaternary --}}
-			<div class="page-intro__image{{#if additionalImgClass}} {{additionalImgClass}}{{/if}}">
-				<div class="page-intro__img has-cover" style="background-image: url('{{image}}');"></div>
-				<span class="circle circle--blue circle--large"></span>
-				<span class="circle circle--mint"></span>
+			<div class="page-intro__image-outer{{#if additionalOuterImgClass}} {{additionalOuterImgClass}}{{/if}}">
+				<div class="page-intro__image{{#if additionalImgClass}} {{additionalImgClass}}{{/if}}">
+					<div class="page-intro__img has-cover" style="background-image: url('{{image}}');"></div>
+					<span class="circle circle--blue circle--large"></span>
+					<span class="circle circle--mint"></span>
+				</div>
 			</div>
 		</div>
 	</div>
