--- a/Patrija.Web/Views/ContactUs.cshtml
+++ b/Patrija.Web/Views/ContactUs.cshtml
@@ -1,5 +1,5 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContentModels.ContactUs>
-@using ContentModels = Patrija.Models.Generated;
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<Patrija.Models.Generated.ContactUs>
+
 @{
 	Layout = null;
 }
