Contact map info added

--- a/Patrija.Web/Views/ContactUs.cshtml
+++ b/Patrija.Web/Views/ContactUs.cshtml
@@ -1,5 +1,8 @@
-﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<Patrija.Models.Generated.ContactUs>
+﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ContactUsViewModel>
 
-@{
-	Layout = null;
+@if (Model.MapInfo != null)
+{
+    Html.RenderAction<NestedContentController>(c => nameof(c.ContactMap), new { viewModel = Model.MapInfo });
 }
+
+@*{{> contact-form contactForm}}*@
