finished featured news module

--- a/html/src/html/templates/novosti/template.hbs
+++ b/html/src/html/templates/novosti/template.hbs
@@ -6,6 +6,10 @@
 		<main class="main">
 			{{> page-intro pageIntro}}
 
+			{{> featured-news featuredNews}}
+
+			{{> articles articles}}
+
 			{{> news-list newsList}}
 
 			{{> join-module joinUs}}
