--- a/html/src/html/modules/featured-news/featured-news.hbs
+++ b/html/src/html/modules/featured-news/featured-news.hbs
@@ -1,5 +1,38 @@
 <div class="featured-news">
-	<h2>{{title}} - featured-news</h2>
+	<div class="wrap wrap--normal">
+		<h2 class="h2 featured-news__title">{{title}}</h2>
+		<div class="featured-news__container">
+			<div class="featured-news__large">
+				<div class="featured-news__large-image has-cover" style="background-image: url('{{largeImage}}');">
+					<h3 class="h6 featured-news__large-title"><a href="javascript:;">{{largeTitle}}</a></h3>
+				</div>
+			</div>
+			<div class="featured-news__items">
+				{{#if blogItems}}
+					<ul class="featured-news__items-list">
+						{{#each blogItems}}
+							<li class="featured-news__item">
+								<div class="featured-news__item-img">
+									<a href="javascript:;">
+										<span class="featured-news__item-image has-cover" style="background-image: url('{{this.image}}');"></span>
+									</a>
+								</div>
+								<div class="featured-news__item-content">
+									<span class="featured-news__item-date">{{this.date}}</span>
+									<h4 class="h6 featured-news__item-title">
+										<a href="javascript:;">{{this.titleText}}</a>
+									</h4>
+								</div>
+							</li>
+						{{/each}}
+					</ul>
+				{{/if}}
+			</div>
+		</div>
+		<div class="featured-news__buttons">
+			<button class="btn btn--mint featured-news__load-more" type="button">{{loadMore}}</button>
+		</div>
+	</div>
 </div>
 
 {{!-- Aktuelnosti --}}
