--- a/html/src/scss/modules/_featured-news.scss
+++ b/html/src/scss/modules/_featured-news.scss
@@ -2,5 +2,97 @@
 //------------------------------------------------------------------------------
 
 .featured-news {
-	color: $black;
+	margin-bottom: 214px;
+}
+
+.featured-news__title {
+	padding: 0 94px;
+	margin-bottom: 35px;
+}
+
+.featured-news__container {
+	padding: 0 79px;
+	margin-bottom: 50px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.featured-news__large {
+	position: relative;
+	padding: 0 15px;
+	flex: 1 1 57%;
+	max-width: 57%;
+}
+
+.featured-news__large-image {
+	position: relative;
+	width: 100%;
+	border-radius: 10px;
+	padding-bottom: 79.2%;
+}
+
+.featured-news__large-title {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	color: $white;
+	padding: 12px 28px;
+	border-radius: 0 0 10px 10px;
+	background-color: $blue;
+}
+
+.featured-news__items {
+	padding: 0 15px;
+	flex: 1 1 43%;
+	max-width: 43%;
+}
+
+.featured-news__item {
+	display: block;
+	font-size: 0;
+	margin-bottom: 26px;
+	width: 100%;
+}
+
+.featured-news__item-image {
+	width: 100%;
+	position: relative;
+	padding-bottom: 71%;
+	border-radius: 10px;
+	display: block;
+}
+
+.featured-news__item-img {
+	position: relative;
+	margin-right: 25px;
+	vertical-align: top;
+	display: inline-block;
+	width: 212px;
+}
+
+.featured-news__item-content {
+	vertical-align: top;
+	display: inline-block;
+	width: calc(100% - 237px);
+}
+
+.featured-news__item-title {
+	line-height: 25px;
+}
+
+.featured-news__item-date {
+	font-size: 14px;
+	line-height: 22px;
+	display: block;
+	padding: 4px 2px 6px;
+}
+
+.featured-news__buttons {
+	margin-top: -12px;
+	text-align: center;
+}
+
+.featured-news__load-more {
+	min-width: 262px;
 }
