Implemented missing parts into pages: home, about us, project page and support us. Implementing Donations into support us.

--- a/Patrija.Web/Views/AboutUsPage.cshtml
+++ b/Patrija.Web/Views/AboutUsPage.cshtml
@@ -14,4 +14,15 @@
 {
     Html.RenderAction<NestedContentController>(c => nameof(c.ImageWithText), new { viewModel = Model.ImageWithText });
 }
+
+@if (Model.Links != null)
+{
+    Html.RenderAction<NestedContentController>(c => nameof(c.LinksList), new { viewModel = Model.Links });
 }
+
+@if (Model.JoinUs != null)
+{
+    Html.RenderAction<NestedContentController>(c => nameof(c.JoinUs), new { viewModel = Model.JoinUs });
+}
+
+
