--- a/Patrija.Web/Views/ProjectPage.cshtml
+++ b/Patrija.Web/Views/ProjectPage.cshtml
@@ -1,5 +1,10 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<ProjectPageViewModel>
 
+@if(Model.PageIntro != null)
+{
+    Html.RenderAction<NestedContentController>(c => nameof(c.PageIntro), new { viewModel = Model.PageIntro });
+}
+
 @foreach (var block in Model.Blocks)
 {
     Html.RenderAction<NestedContentController>(c => nameof(c.Block), new { viewModel = block });
