--- a/html/src/scss/modules/_articles.scss
+++ b/html/src/scss/modules/_articles.scss
@@ -2,5 +2,71 @@
 //------------------------------------------------------------------------------
 
 .articles {
-	color: $black;
+	padding-top: 196px;
+	padding-bottom: 180px;
+	margin-bottom: 90px;
+}
+
+.articles__title {
+	padding: 0 94px;
+	margin-bottom: 58px;
+}
+
+.articles__container {
+	padding: 0 79px;
+	margin-bottom: 50px;
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.articles__item {
+	font-size: 0;
+	padding: 0 15px;
+	margin-bottom: 25px;
+	flex: 1 1 50%;
+	max-width: 50%;
+}
+
+.articles__item-image {
+	width: 100%;
+	position: relative;
+	padding-bottom: 57%;
+	border-radius: 10px;
+	display: block;
+}
+
+.articles__item-img {
+	position: relative;
+	margin-right: 30px;
+	vertical-align: top;
+	display: inline-block;
+	width: 246px;
+}
+
+.articles__item-content {
+	padding-top: 18px;
+	vertical-align: top;
+	display: inline-block;
+	width: calc(100% - 276px);
+}
+
+.articles__item-title {
+	line-height: 25px;
+}
+
+.articles__item-date {
+	font-size: 14px;
+	line-height: 22px;
+	display: block;
+	padding: 4px 2px 6px;
+}
+
+.articles__buttons {
+	margin-top: -12px;
+	text-align: center;
+}
+
+.articles__load-more {
+	min-width: 262px;
 }
