image-text reworked outer image

--- a/html/src/html/modules/image-text/image-text.hbs
+++ b/html/src/html/modules/image-text/image-text.hbs
@@ -1,8 +1,10 @@
 <div class="image-text">
 	<div class="wrap wrap--medium">
 		<div class="image-text__container{{#if itemReversed}} image-text__container--reverse{{/if}}">
-			<div class="image-text__image">
-				<div class="image-text__img has-cover" style="background-image: url('{{image}}')"></div>
+			<div class="image-text__image-outer">
+				<div class="image-text__image">
+					<div class="image-text__img has-cover" style="background-image: url('{{image}}')"></div>
+				</div>
 			</div>
 			<div class="image-text__content">
 				<h2 class="h2 image-text__title">{{title}}</h2>
